[gd_scene load_steps=10 format=2]

[ext_resource path="res://asset/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Menu_iniziale.gd" type="Script" id=2]
[ext_resource path="res://Pick_players.tscn" type="PackedScene" id=3]
[ext_resource path="res://asset/sounds/glass.ogg" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
size = 120
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 70
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 0.509804 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 0.705882 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0.392157 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="Menu_iniziale" type="Node2D"]
script = ExtResource( 2 )
MainAppScene = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 2048.0
margin_bottom = 1200.0
color = Color( 0.156863, 0.196078, 0.392157, 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 2048.0
margin_bottom = 1200.0
custom_constants/margin_right = 200
custom_constants/margin_top = 70
custom_constants/margin_left = 200
custom_constants/margin_bottom = 100

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 200.0
margin_top = 70.0
margin_right = 1848.0
margin_bottom = 1100.0

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 1648.0
margin_bottom = 513.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "Le fo io le squadre"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 517.0
margin_right = 1648.0
margin_bottom = 1030.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 1648.0
margin_bottom = 113.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 50
custom_constants/margin_left = 50

[node name="Nuovo team" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer"]
margin_left = 50.0
margin_right = 1598.0
margin_bottom = 113.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 3 )
text = "Crea team"

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 133.0
margin_right = 1648.0
margin_bottom = 246.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 50
custom_constants/margin_left = 50

[node name="Carica team" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer2"]
margin_left = 50.0
margin_right = 1598.0
margin_bottom = 113.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 3 )
text = "Carica team"

[node name="MarginContainer4" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 266.0
margin_right = 1648.0
margin_bottom = 379.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 50
custom_constants/margin_left = 50

[node name="Fake team" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer4"]
margin_left = 50.0
margin_right = 1598.0
margin_bottom = 113.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 3 )
text = "Usa team dimostrativo"

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 399.0
margin_right = 1648.0
margin_bottom = 513.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 50
custom_constants/margin_left = 50

[node name="Creato da" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer3"]
margin_left = 50.0
margin_right = 1598.0
margin_bottom = 114.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 3 )
text = "Creato da"

[node name="choice_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="button_up" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer/Nuovo team" to="." method="_on_Nuovo_team_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer2/Carica team" to="." method="_on_Carica_team_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer4/Fake team" to="." method="_on_Fake_team_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer3/Creato da" to="." method="_on_Creato_da_button_up"]
